err/ib-python.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ib'...
Listing './lib/python3.5/site-packages/ib/ext'...
Compiling './lib/python3.5/site-packages/ib/ext/EClientSocket.py'...
***   File "./lib/python3.5/site-packages/ib/ext/EClientSocket.py", line 296
    print "Server Version: %d" % self.m_serverVersion
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ib/ext/EReader.py'...
***   File "./lib/python3.5/site-packages/ib/ext/EReader.py", line 921
    return 0l if strval is None else Long.parseLong(strval)
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ib/lib'...
Compiling './lib/python3.5/site-packages/ib/lib/__init__.py'...
***   File "./lib/python3.5/site-packages/ib/lib/__init__.py", line 239
    except (socket.error, ), ex:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ib/opt'...
Listing './lib/python3.5/site-packages/ib/sym'...
Listing './lib/python3.5/site-packages/ib_python-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
